# DirtyLockdown

./: CMakeLists.txt  Info.plist  README.md
src/: SceneDelegate.m  ViewController.m  grant_full_disk_access.h  grant_full_disk_access.m  main.m
